--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,4 @@
 <!-- app.component.html -->
-<custom-thumbnail-youtube-thumbnail
-  [channelLogoUrl]="channelLogoUrl"
-  [thumbnailUrl]="thumbnailUrl"
-  [videoLength]="videoLength"
-></custom-thumbnail-youtube-thumbnail>
+<custom-thumbnail-youtube-thumbnail></custom-thumbnail-youtube-thumbnail>
 
 <router-outlet></router-outlet>
