--- a/src/app/components/youtube-thumbnail/youtube-thumbnail.component.scss
+++ b/src/app/components/youtube-thumbnail/youtube-thumbnail.component.scss
@@ -188,7 +188,7 @@ input{
  width: fit-content;
  display: flex;
  justify-content: space-between;
- width: calc($thumbnail-width/1.7);
+ width: $thumbnail-width
 }
 
 .download-icon{
