--- a/src/app/components/youtube-thumbnail/youtube-thumbnail.component.scss
+++ b/src/app/components/youtube-thumbnail/youtube-thumbnail.component.scss
@@ -187,7 +187,7 @@ input{
  margin: auto;
  width: fit-content;
  display: flex;
- justify-content: space-between;
+ justify-content: space-around;
  width: $thumbnail-width
 }
 
