--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -11,13 +11,13 @@
         
            
                 <a [href]="'https://www.twitter.com/'+userName" title="Twitter" target="_blank">
-                    <img src="https://img.icons8.com/color/48/twitter--v1.png"
+                    <img src="https://img.icons8.com/color/48/twitter-circled--v1.png"
                         alt="twitter--v1" />
                 </a>
             
            
                 <a [href]="'https://www.linkedin.com/in/'+userName" title="Instagram" target="_blank">
-                    <img src="https://img.icons8.com/color/48/linkedin.png" alt="linkedin" />
+                    <img src="https://img.icons8.com/color/48/linkedin-circled--v1.png" alt="linkedin" />
                 </a>
 
                 <a [href]="'https://www.instagram.com/'+userName" title="Instagram" target="_blank">
@@ -32,7 +32,7 @@
             
            
                 <a [href]="'https://www.youtube.com/@'+userName" title="Twitter" target="_blank">
-                    <img src="https://img.icons8.com/3d-fluency/94/youtube-play.png"
+                    <img src="https://upload.wikimedia.org/wikipedia/commons/a/a0/YouTube_social_red_circle_%282017%29.svg"
                         alt="youtube-play" />
                 </a>
             
