--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -12,28 +12,28 @@
            
                 <a [href]="'https://www.twitter.com/'+userName" title="Twitter" target="_blank">
                     <img src="https://img.icons8.com/color/48/twitter-circled--v1.png"
-                        alt="twitter--v1" />
+                        alt="MythOfSagar" />
                 </a>
             
            
                 <a [href]="'https://www.linkedin.com/in/'+userName" title="Instagram" target="_blank">
-                    <img src="https://img.icons8.com/color/48/linkedin-circled--v1.png" alt="linkedin" />
+                    <img src="https://img.icons8.com/color/48/linkedin-circled--v1.png" alt="MythOfSagar" />
                 </a>
 
                 <a [href]="'https://www.instagram.com/'+userName" title="Instagram" target="_blank">
                     <img src="https://img.icons8.com/3d-fluency/94/instagram-new.png"
-                        alt="instagram-new" />
+                    alt="MythOfSagar" />
                 </a>
             
            
                 <a [href]="'https://www.github.com/'+userName" title="Github" target="_blank">
-                    <img src="https://img.icons8.com/fluency/48/github.png" alt="github" />
+                    <img src="https://img.icons8.com/fluency/48/github.png" alt="MythOfSagar" />
                 </a>
             
            
                 <a [href]="'https://www.youtube.com/@'+userName" title="Twitter" target="_blank">
                     <img src="https://upload.wikimedia.org/wikipedia/commons/a/a0/YouTube_social_red_circle_%282017%29.svg"
-                        alt="youtube-play" />
+                    alt="MythOfSagar" />
                 </a>
             
        
